chore(package.json): add publishConfig and set access to public

--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -15,6 +15,9 @@
     "src",
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@atlaskit/tree": "^8.4.0",
     "@babel/cli": "^7.14.8",
