--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -54,7 +54,15 @@
     "react-redux": "^7.2.6",
     "react-use-analytics-api": "^1.4.16",
     "typescript": "^4.3.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "gatsby-alias-imports": "^1.0.6",
+    "gatsby-plugin-compile-es6-packages": "^2.1.1",
+    "gatsby-plugin-emotion": "^7.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-sharp": "^4.2.0"
   },
   "devDependencies": {
     "@snek-at/storybook-addon-chakra-ui": "^1.0.0-beta.1",
@@ -72,15 +80,7 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-relative-path-import": "^2.0.1",
     "babel-preset-gatsby-package": "^2.2.0",
-    "gatsby-alias-imports": "^1.0.6",
-    "gatsby-plugin-compile-es6-packages": "^2.1.1",
-    "gatsby-plugin-emotion": "^7.2.0",
-    "gatsby-plugin-image": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
-    "gatsby-source-filesystem": "^4.2.0",
-    "gatsby-transformer-sharp": "^4.2.0",
     "isomorphic-fetch": "^3.0.0"
   }
 }
