chore(package.json): reorder dependencies

--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -43,7 +43,15 @@
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "babel-loader": "^8.2.2",
     "framer-motion": "^4",
+    "gatsby-alias-imports": "^1.0.6",
+    "gatsby-plugin-compile-es6-packages": "^2.1.1",
+    "gatsby-plugin-emotion": "^7.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "graphql-tag": "^2.12.6",
     "husky": "^7.0.1",
     "immutability-helper": "^3.1.1",
@@ -54,15 +62,7 @@
     "react-redux": "^7.2.6",
     "react-use-analytics-api": "^1.4.16",
     "typescript": "^4.3.5",
-    "uuid": "^8.3.2",
-    "gatsby-alias-imports": "^1.0.6",
-    "gatsby-plugin-compile-es6-packages": "^2.1.1",
-    "gatsby-plugin-emotion": "^7.2.0",
-    "gatsby-plugin-image": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-source-filesystem": "^4.2.0",
-    "gatsby-transformer-sharp": "^4.2.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@snek-at/storybook-addon-chakra-ui": "^1.0.0-beta.1",
