--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@loadable/component": "^5.15.0",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@snek-at/bridge": "^1.0.0",
     "@snek-at/react-lottie": "^1.0.0-beta.3",
