--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -25,6 +25,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "react-test-renderer": "^17.0.2",
+    "storybook-addon-gatsby": "^0.0.3",
     "ts-jest": "^27.1.0"
   },
   "dependencies": {
