--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -17,16 +17,19 @@
     "access": "public"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
     "@snek-at/storybook-addon-chakra-ui": "^1.0.0-beta.1",
+    "@storybook/addon-actions": "^6.4.12",
     "@storybook/addon-essentials": "^6.4.12",
     "@storybook/addon-links": "^6.4.12",
     "@storybook/builder-webpack5": "^6.4.12",
     "@storybook/manager-webpack5": "^6.4.12",
-    "@storybook/react": "^6.4.9",
+    "@storybook/react": "^6.4.12",
     "@types/jest": "^27.0.3",
     "@types/react-test-renderer": "^17.0.1",
     "@types/uuid": "^8.3.4",
     "babel-jest": "^27.4.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-gatsby": "^2.3.0",
     "identity-obj-proxy": "^3.0.0",
