add updatemodal for imagefield

--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -26,6 +26,7 @@
     "@storybook/manager-webpack5": "^6.4.12",
     "@storybook/react": "^6.4.12",
     "@types/jest": "^27.0.3",
+    "@types/react": "^17.0.38",
     "@types/react-test-renderer": "^17.0.1",
     "@types/uuid": "^8.3.4",
     "babel-jest": "^27.4.2",
@@ -41,7 +42,7 @@
   },
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.2",
-    "@chakra-ui/react": "^1.7.3",
+    "@chakra-ui/react": "^1.7.4",
     "@ckeditor/ckeditor5-react": "^3.0.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -51,6 +52,7 @@
     "gatsby": "^4.3.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
+    "react": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-in-viewport": "^1.0.0-alpha.20",
     "redux": "^4.1.2",
