--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -52,6 +52,10 @@
     "gatsby": "^4.3.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
+    "gatsby-plugin-image": "^2.5.1",
+    "gatsby-plugin-sharp": "^4.5.1",
+    "gatsby-source-filesystem": "^4.5.1",
+    "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-in-viewport": "^1.0.0-alpha.20",
