--- a/packages/jaen/tsconfig.json
+++ b/packages/jaen/tsconfig.json
@@ -10,5 +10,5 @@
   },
   "include": ["src", "src/**/*.json"],
   "typeRoots": ["./@types", "../../node_modules"],
-  "references": []
+  "references": [{"path": "../snek-finder"}]
 }
