--- a/packages/snek-finder/package.json
+++ b/packages/snek-finder/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@snek-at/snek-finder",
-  "version": "1.0.0-beta.17",
+  "name": "@jaenjs/snek-finder",
+  "version": "1.0.0",
   "description": "",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "keywords": [],
   "author": "",
   "license": "",
