--- a/packages/snek-finder/package.json
+++ b/packages/snek-finder/package.json
@@ -31,7 +31,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@react-icons/all-files": "^4.1.0",
+    "@react-icons/all-files": "4.0.0",
     "@react-pdf-viewer/core": "^2.7.1",
     "@react-pdf-viewer/default-layout": "^2.7.1",
     "@react-pdf-viewer/print": "^2.7.1",
