--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -52,6 +52,8 @@
     "@loadable/component": "^5.15.2",
     "@react-icons/all-files": "4.0.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "babel-preset-react": "^6.24.1",
+    "esm": "^3.2.25",
     "framer-motion": "^5",
     "gatsby": "^4.3.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
