--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -52,6 +52,7 @@
     "@loadable/component": "^5.15.2",
     "@react-icons/all-files": "4.0.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/loadable__component": "^5.13.4",
     "babel-preset-react": "^6.24.1",
     "esm": "^3.2.25",
     "framer-motion": "^5",
