update paths and fix image field ssr

--- a/packages/jaen/tsconfig.json
+++ b/packages/jaen/tsconfig.json
@@ -4,7 +4,9 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["src/*"]
+      "@jaen/*": ["src/*"],
+      "@jaen-admin/*": ["src/internal-plugins/admin/*"],
+      "@jaen-pages/*": ["src/internal-plugins/pages/*"]
     }
   },
   "include": ["**/*"],
