--- a/packages/jaen/.babelrc
+++ b/packages/jaen/.babelrc
@@ -4,7 +4,9 @@
       "babel-plugin-module-resolver",
       {
         "alias": {
-          "@src": "./src"
+          "@jaen": "./src",
+          "@jaen-admin": "./src/internal-plugins/admin",
+          "@jaen-pages": "./src/internal-plugins/pages"
         }
       }
     ]
