add reference to tsconfig

--- a/packages/jaen/src/internal-plugins/pages/tsconfig.json
+++ b/packages/jaen/src/internal-plugins/pages/tsconfig.json
@@ -1,4 +1,9 @@
 {
   "extends": "../../../tsconfig.json",
-  "include": ["**/*"]
+  "include": ["**/*"],
+  "references": [
+    {
+      "path": "../../."
+    }
+  ]
 }
