--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -9,9 +9,11 @@
     "build-storybook": "build-storybook",
     "test": "jest"
   },
+  "bin": {
+    "jaen": "./src/bin/run"
+  },
   "include": [
-    "src",
-    "dist"
+    "src"
   ],
   "publishConfig": {
     "access": "public"
@@ -32,12 +34,14 @@
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-remove-imports": "^1.7.0",
     "babel-preset-gatsby": "^2.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "react-test-renderer": "^17.0.2",
     "storybook-addon-gatsby": "^0.0.3",
     "ts-jest": "^27.1.0",
+    "tsconfig-paths": "^3.12.0",
     "uuid": "^8.3.2"
   },
   "dependencies": {
