--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -56,6 +56,7 @@
     "@loadable/component": "^5.15.2",
     "@react-icons/all-files": "4.0.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "@rtk-query/codegen-openapi": "^1.0.0-alpha.1",
     "@types/loadable__component": "^5.13.4",
     "babel-preset-react": "^6.24.1",
     "esm": "^3.2.25",
@@ -77,6 +78,7 @@
     "react-pluggable": "^0.4.3",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "ts-node": "^10.5.0",
     "uuid": "^8.3.2"
   }
 }
