--- a/packages/gatsby-jaen-mailpress/package.json
+++ b/packages/gatsby-jaen-mailpress/package.json
@@ -29,7 +29,7 @@
     "@snek-functions/origin": "^0.9.0",
     "gatsby": "^5.12.4",
     "react": "^18.2.0",
-    "@atsnek/jaen": "^1.0.0-rc.55"
+    "jaen": "^1.0.0-rc.55"
   },
   "devDependencies": {}
 }
