--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@atsnek/jaen",
+  "name": "jaen",
   "version": "1.0.0-rc.91",
   "description": "The Webapps framework for creating scalable and dynamic applications with ease.",
   "type": "module",
