--- a/my-gatsby-site/package.json
+++ b/my-gatsby-site/package.json
@@ -16,8 +16,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@atsnek/jaen": "^1.0.0-rc.1",
-    "@atsnek/jaen-fields-mdx": "^1.0.0-rc.1",
+    "jaen": "^1.0.0-rc.1",
+    "jaen-fields-mdx": "^1.0.0-rc.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
     "gatsby": "^5.11.0",
