--- a/packages/gatsby-jaen-resource/package.json
+++ b/packages/gatsby-jaen-resource/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "keywords": [
     "gatsby",
-    "@atsnek/jaen"
+    "jaen"
   ],
   "dependencies": {
     "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
