--- a/packages/jaen-fields-mdx/package.json
+++ b/packages/jaen-fields-mdx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@atsnek/jaen-fields-mdx",
+  "name": "jaen-fields-mdx",
   "version": "1.0.0-rc.20",
   "description": "Markdown field for Jaen",
   "type": "module",
@@ -57,7 +57,7 @@
     "vfile-statistics": "^3.0.0"
   },
   "peerDependencies": {
-    "@atsnek/jaen": "^1.0.0-rc.4",
+    "jaen": "^1.0.0-rc.4",
     "gatsby": "^5.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
