chore: update versions

--- a/packages/jaen-fields-mdx/package.json
+++ b/packages/jaen-fields-mdx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jaen-fields-mdx",
-  "version": "1.0.0-rc.20",
+  "version": "1.0.0",
   "description": "Markdown field for Jaen",
   "type": "module",
   "source": "src/index.ts",
