--- a/packages/gatsby-source-jaen/package.json
+++ b/packages/gatsby-source-jaen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-jaen",
-  "version": "1.0.0-rc.27",
+  "version": "1.0.0",
   "description": "Source plugin for pulling data into Gatsby from Jaen",
   "files": [
     "dist",
