--- a/packages/jaen/package.json
+++ b/packages/jaen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jaen",
-  "version": "1.0.0-rc.91",
+  "version": "3.0.0",
   "description": "The Webapps framework for creating scalable and dynamic applications with ease.",
   "type": "module",
   "source": "src/index.ts",
