chore(gatsby-jaen-resource): make package private

--- a/packages/gatsby-jaen-resource/package.json
+++ b/packages/gatsby-jaen-resource/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gatsby-jaen-resource",
+  "private": true,
   "version": "0.0.9",
   "description": "Resource management plugin for Jaen",
   "main": "index.js",
