--- a/my-gatsby-site/package.json
+++ b/my-gatsby-site/package.json
@@ -10,18 +10,17 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "NODE_OPTIONS=--max-old-space-size=8192 gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "jaen": "^1.0.0-rc.1",
-    "jaen-fields-mdx": "^1.0.0-rc.1",
+    "jaen": "*",
+    "jaen-fields-mdx": "*",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
     "gatsby": "^5.11.0",
-    "gatsby-plugin-jaen": "^1.0.0-rc.1",
+    "gatsby-plugin-jaen": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
