--- a/packages/gatsby-plugin-jaen/package.json
+++ b/packages/gatsby-plugin-jaen/package.json
@@ -16,7 +16,7 @@
     "build": "tsc gatsby/* --outDir dist/gatsby --esModuleInterop --skipLibCheck --resolveJsonModule && yarn build:css"
   },
   "peerDependencies": {
-    "jaen": "^1.0.0-rc.2",
+    "jaen": "^1.0.0",
     "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
     "gatsby": "^5.11.0",
     "react": "^18.2.0"
@@ -53,7 +53,7 @@
     "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-plugin-ts-config": "^2.1.3",
     "gatsby-source-filesystem": "^5.11.0",
-    "gatsby-source-jaen": "^1.0.0-rc.26",
+    "gatsby-source-jaen": "^1.0.0",
     "gatsby-transformer-sharp": "^5.11.0",
     "isomorphic-dompurify": "^1.8.0",
     "lucide-react": "^0.358.0",
