--- a/packages/jaen-fields-mdx/package.json
+++ b/packages/jaen-fields-mdx/package.json
@@ -57,7 +57,7 @@
     "vfile-statistics": "^3.0.0"
   },
   "peerDependencies": {
-    "jaen": "^1.0.0-rc.4",
+    "jaen": "^1.0.0",
     "gatsby": "^5.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
