--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - uses: oven-sh/setup-bun@v1
-      - run: bun install --globally yarn
-      - run: bun install
+      - run: yarn install
       - name: Build
         run: yarn run build
       - name: Release
