--- a/packages/gatsby-jaen-lens/package.json
+++ b/packages/gatsby-jaen-lens/package.json
@@ -19,6 +19,7 @@
     "proxy"
   ],
   "dependencies": {
+    "jaen": "^1.1.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "snek-query": "^0.0.83",
@@ -27,7 +28,6 @@
   },
   "peerDependencies": {
     "@chakra-ui/react": "^2.8.0",
-    "@snek-functions/origin": "^0.9.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
