--- a/packages/gatsby-jaen-lens/package.json
+++ b/packages/gatsby-jaen-lens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-jaen-lens",
-  "version": "1.0.0",
+  "version": "0.0.17",
   "description": "Snek lens plugin for Jaen to render proxied views of internal services behind a firewall.",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
   },
   "peerDependencies": {
     "@chakra-ui/react": "^2.8.0",
+    "@snek-functions/origin": "^0.9.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
