--- a/packages/gatsby-jaen-mailpress/package.json
+++ b/packages/gatsby-jaen-mailpress/package.json
@@ -16,20 +16,23 @@
     "build": "tsc gatsby/* --outDir dist/gatsby --esModuleInterop --skipLibCheck --resolveJsonModule && tsc"
   },
   "dependencies": {
+    "@gqty/react": "^3.0.5",
     "@monaco-editor/react": "^4.6.0",
     "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
     "@tanstack/react-table": "^8.10.7",
     "isomorphic-dompurify": "^1.9.0",
-    "react-hook-form": "^7.46.1",
-    "snek-query": "^0.0.110"
+    "react-hook-form": "^7.46.1"
   },
   "peerDependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
-    "@snek-functions/origin": "^0.9.0",
     "gatsby": "^5.12.4",
-    "react": "^18.2.0",
-    "jaen": "^1.0.0"
+    "jaen": "^1.0.0",
+    "react": "^18.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gqty": "^3.2.2",
+    "graphql": "^16.9.0",
+    "typescript": "^5.7.2"
+  }
 }
