feat: add templated email sending functionality
Features include:
 - Introduce the ability to select and send predefined email templates.
 - Implement a preview modal to view the filled email template before
   sending.
 - Integrate form validation using react-hook-form and Zod for robust
   input handling.
 - Add a rich text editor (Tiptap) for composing and editing email
   messages.
 - Enhance user experience with loading states and error handling for
   template fetching.
 - Ensure secure content rendering by sanitizing HTML with DOMPurify.

Some features like BCC and scheduling are not yet supported by the
backend and have therefore been disabled (css display none) in the UI.

--- a/packages/gatsby-jaen-mailpress/package.json
+++ b/packages/gatsby-jaen-mailpress/package.json
@@ -20,6 +20,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
     "@tanstack/react-table": "^8.10.7",
+    "@tiptap/extension-placeholder": "^2.11.0",
     "isomorphic-dompurify": "^1.9.0",
     "react-hook-form": "^7.46.1"
   },
