feat: add husky
pre-commit hook:
 - check/fix with pretty-quick
 - sort package.json with sort-package-json

--- a/packages/gatsby-plugin-jaen/package.json
+++ b/packages/gatsby-plugin-jaen/package.json
@@ -11,15 +11,9 @@
     "babel-plugin-remove-page-config.js"
   ],
   "scripts": {
+    "build": "tsc gatsby/* --outDir dist/gatsby --esModuleInterop --skipLibCheck --resolveJsonModule && yarn build:css",
     "build:css": "tailwindcss -i ./src/styles/globals.css -o dist/jaen.css",
-    "build:css:watch": "tailwindcss -i ./src/styles/globals.css -o dist/jaen.css --watch",
-    "build": "tsc gatsby/* --outDir dist/gatsby --esModuleInterop --skipLibCheck --resolveJsonModule && yarn build:css"
-  },
-  "peerDependencies": {
-    "jaen": "^1.0.0",
-    "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
-    "gatsby": "^5.11.0",
-    "react": "^18.2.0"
+    "build:css:watch": "tailwindcss -i ./src/styles/globals.css -o dist/jaen.css --watch"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.0",
@@ -80,5 +74,11 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "gatsby": "^5.11.0",
     "tailwindcss": "^3.4.1"
+  },
+  "peerDependencies": {
+    "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
+    "gatsby": "^5.11.0",
+    "jaen": "^1.0.0",
+    "react": "^18.2.0"
   }
 }
