--- a/packages/gatsby-jaen-resource/package.json
+++ b/packages/gatsby-jaen-resource/package.json
@@ -1,24 +1,24 @@
 {
   "name": "gatsby-jaen-resource",
-  "private": true,
   "version": "0.0.9",
+  "private": true,
   "description": "Resource management plugin for Jaen",
-  "main": "index.js",
   "keywords": [
     "gatsby",
     "jaen"
   ],
+  "main": "index.js",
   "dependencies": {
     "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.11.0/react-icons-all-files-4.11.0.tgz",
     "react-hook-form": "^7.46.1",
     "snek-query": "^0.0.83"
   },
+  "devDependencies": {},
   "peerDependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
     "@snek-functions/origin": "^0.9.0",
     "gatsby": "^5.12.4",
     "react": "^18.2.0"
-  },
-  "devDependencies": {}
+  }
 }
