feat(i18n): integrate gatsby-plugin-i18n-l10n support

--- a/packages/gatsby-plugin-jaen/package.json
+++ b/packages/gatsby-plugin-jaen/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^10.13.0",
     "gatsby-plugin-google-gtag": "^5.12.0",
+    "gatsby-plugin-i18n-l10n": "^5.14.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-sharp": "^5.11.0",
@@ -63,6 +64,7 @@
     "react-dropzone": "^14.2.3",
     "react-filerobot-image-editor": "^4.5.1",
     "react-hook-form": "^7.51.5",
+    "react-intl": "^6.6.2",
     "react-konva": "^18.2.10",
     "react-photo-view": "^1.2.3",
     "react-zoom-pan-pinch": "^3.1.0",
