--- a/packages/gatsby-plugin-jaen/package.json
+++ b/packages/gatsby-plugin-jaen/package.json
@@ -51,7 +51,6 @@
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-remove-console": "^0.0.2",
     "gatsby-plugin-sharp": "^5.11.0",
-    "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-plugin-ts-config": "^2.1.3",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-source-jaen": "^1.0.0",
@@ -64,6 +63,7 @@
     "react-dropzone": "^14.2.3",
     "react-filerobot-image-editor": "^4.5.1",
     "react-hook-form": "^7.51.5",
+    "react-intl": "6.8.9",
     "react-konva": "^18.2.10",
     "react-photo-view": "^1.2.3",
     "react-zoom-pan-pinch": "^3.1.0",
